--- a/example/Makefile
+++ b/example/Makefile
@@ -53,7 +53,7 @@ macro2path:
 
 format:
 	@echo Astyle source code format
-	./utils_bin/astyle.exe --project="./utils_bin/.astylerc" -r **.c,**.h --ignore-exclude-errors --exclude=_build --exclude=_build --exclude=dist --exclude=utils -v -Q
+	./utils_bin/astyle.exe --project="./utils_bin/.astylerc" -r **.c,**.h --ignore-exclude-errors --exclude=_build --exclude=utils_bin --exclude=dist --exclude=utils -v -Q
 
 assets:
 	@echo Create Assets
